--- a/springmvc-learn/src/main/webapp/WEB-INF/web.xml
+++ b/springmvc-learn/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>webmvc</servlet-name>
-		<url-pattern>*.do</url-pattern>
+<!-- 		<url-pattern>*.do</url-pattern> -->
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 </web-app>
