--- a/springmvc-learn/src/main/webapp/WEB-INF/web.xml
+++ b/springmvc-learn/src/main/webapp/WEB-INF/web.xml
@@ -2,19 +2,12 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee   
 	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-
+	<!--spring容器初始化  -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
-	
-	<filter>
-		<filter-name></filter-name>
-		<filter-class></filter-class>
-	</filter>
-	<filter-mapping>
-	</filter-mapping>
-	
+	<!-- spring mvc -->
 	<servlet>
 		<servlet-name>webmvc</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
