--- a/springmvc-learn/pom.xml
+++ b/springmvc-learn/pom.xml
@@ -16,13 +16,6 @@
       <scope>provided</scope>
     </dependency>
     
-    <dependency>
-		<groupId>log4j</groupId>
-		<artifactId>log4j</artifactId>
-		<version>1.2.17</version>
-	</dependency>
-	
-	
     
   	<!-- test jar -->
     <dependency>
@@ -58,9 +51,49 @@
     	<scope>test</scope>
     </dependency>
     
+    
+    <dependency>
+		<groupId>com.xieyang.oracle</groupId>
+		<artifactId>ojdbc6</artifactId>
+		<version>10.3</version>
+		<scope>system</scope>
+		<systemPath>${project.basedir}/src/lib/ojdbc6.jar</systemPath>
+	</dependency>
+    
   </dependencies>
   <build>
   	<plugins>
+  	
+  		<!-- Deploy and run the server-->
+		<plugin>
+			<groupId>org.apache.tomcat.maven</groupId>
+			<artifactId>tomcat7-maven-plugin</artifactId>
+			<version>2.2</version>
+			<configuration>
+				<!-- http port -->
+				<port>8008</port>
+				<!-- application path always starts with /-->
+				<path>/${project.build.finalName}</path>
+				<!-- optional path to a context file -->
+				<contextFile>src/main/tomcatconf/context.xml</contextFile>
+				<uriEncoding>UTF-8</uriEncoding>
+				<username>tomcat</username>
+				<password>tomcat</password>
+				<update>true</update>
+				<!-- if you want to use test dependencies rather than only runtime -->
+				<useTestClasspath>false</useTestClasspath>
+			</configuration>
+			<dependencies>
+				<dependency>
+					<groupId>com.xieyang.oracle</groupId>
+					<artifactId>ojdbc6</artifactId>
+					<version>10.3</version>
+					<scope>system</scope>
+					<systemPath>${project.basedir}/src/lib/ojdbc6.jar</systemPath>
+				</dependency>
+			</dependencies>
+		</plugin>
+  		
   		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
