--- a/springmvc-learn/src/main/webapp/WEB-INF/web.xml
+++ b/springmvc-learn/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>FirstFilter</filter-name>
+		<!-- 通过配置servlet-name，将Filter关联Servlet -->
 		<servlet-name>FirstServlet</servlet-name>
 	</filter-mapping>
 	
@@ -37,6 +38,16 @@
 		<servlet-name>SecondServlet</servlet-name>
 		<url-pattern>/second</url-pattern>
 	</servlet-mapping>
+	
+	<filter>
+		<filter-name>hiddenHttpMethodFilter</filter-name>
+		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>hiddenHttpMethodFilter</filter-name>
+		<!-- 通过servlet-name和spirngmvc关联 -->
+		<servlet-name>webmvc</servlet-name>
+	</filter-mapping>
 	
 	<!-- spring mvc -->
 	<servlet>
