--- a/springmvc-learn/pom.xml
+++ b/springmvc-learn/pom.xml
@@ -51,6 +51,30 @@
     	<scope>test</scope>
     </dependency>
     
+    <!-- json -->
+<!-- 	<dependency> -->
+<!-- 		<groupId>org.codehaus.jackson</groupId> -->
+<!-- 		<artifactId>jackson-mapper-asl</artifactId> -->
+<!-- 		<version>1.9.9</version> -->
+<!-- 	</dependency> -->
+    <dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-annotations</artifactId>
+		<version>2.1.4</version>
+	</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-core</artifactId>
+		<version>2.1.4</version>
+	</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.1.4</version>
+	</dependency>
+    
+    
+    
     
     <dependency>
 		<groupId>com.xieyang.oracle</groupId>
